@@ -1,3 +1,13 @@
+2006-12-13  Emmanuele Bassi  <ebassi@openedhand.com>
+
+	* xs/ClutterTypes.xs: Wrap clutter_color_equal().
+
+	* xs/ClutterBehaviourPath.xs: Use undef as default
+	value for the knots argument in the constructor.
+
+	* Clutter.pm: Overload the equality operator for
+	the Clutter::Color object to call Clutter::Color::equal.
+
 2006-12-11  Emmanuele Bassi  <ebassi@openedhand.com>
 
 	* examples/behaviour.pl: Implement a rather dummy
